--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-# Python
+# ==============================================================================
+# Context7 AI Agent - Comprehensive .gitignore
+# ==============================================================================
+
+# Python - Core
 __pycache__/
 *.py[cod]
 *$py.class
@@ -16,12 +20,31 @@ parts/
 sdist/
 var/
 wheels/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# Environment
+# Python - Package Managers
+# Poetry
+poetry.lock
+pyproject.toml.user
+poetry.toml
+
+# PDM
+.pdm.toml
+pdm.lock
+.pdm-python
+.pdm-build/
+
+# Hatch
+.hatch/
+
+# Pipenv
+Pipfile.lock
+
+# Virtual Environments
 .env
 .venv
 env/
@@ -29,21 +52,67 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env.local
+.env.development
+.env.production
+.env.staging
 
-# Data files
+# Data & Database
 data/
 *.json
 *.db
 *.sqlite
+*.sqlite3
+*.db-journal
+*.dump
+*.backup
+.migrations/
+alembic/versions/*.py
 
-# IDE
+# IDE - VS Code
 .vscode/
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/*.log
+
+# IDE - JetBrains
 .idea/
+*.iml
+*.ipr
+*.iws
+.idea_modules/
+atlassian-ide-plugin.xml
+
+# IDE - Sublime
+*.sublime-project
+*.sublime-workspace
+
+# IDE - Vim/Neovim
 *.swp
 *.swo
 *~
+._*
+.tags
+.tags1
+Session.vim
+.ctrlp_cache/
+.vim/
+.vimrc.local
+.vimrc.bundles.local
 
-# OS
+# IDE - Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# OS - macOS
 .DS_Store
 .DS_Store?
 ._*
@@ -51,14 +120,157 @@ data/
 .Trashes
 ehthumbs.db
 Thumbs.db
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# OS - Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# OS - Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# Testing & Coverage
+.pytest_cache/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.tox/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.ruff_cache/
+.pytype/
+
+# Documentation
+docs/_build/
+docs/.doctrees/
+site/
+.mkdocs-cache/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
+profile_default/
+ipython_config.py
+
+# Node.js (for MCP server)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.lerna-debug.log*
+.DS_Store
+.vscode-test
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+.docker/
+docker-compose.local.yml
+
+# CI/CD
+.github/secrets/
+.github/workflows/*.yml.bak
+.gitlab-ci-local/
+.circleci/process.yml
+.travis.yml
+
+# Security & Secrets
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+secrets/
+.envrc
+.aws/
+.azure/
+.gcp/
+.terraform/
+*.tfstate
+*.tfstate.*
+
+# Backup & Temporary
+*.bak
+*.tmp
+*.temp
+*.orig
+*.rej
+*.swo
+*.swp
+*~
+.$*
+*#
+.#*
+%*%
+._*
+*~
+*#
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
 
 # Logs
 *.log
 logs/
+log/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
+# Build artifacts
+build/
+dist/
+out/
+target/
+*.zip
+*.tar.gz
+*.tgz
+*.rar
 
+# Editor configurations
+.editorconfig
+.gitattributes
+.gitmessage
